--- a/Security/Guidelines/Web_Security.mediawiki
+++ b/Security/Guidelines/Web_Security.mediawiki
@@ -346,7 +346,7 @@ Content-Security-Policy: default-src https:</pre>
 <pre>&lt;-- Do the same thing, but with a <meta> tag --&gt;
 <meta http-equiv="Content-Security-Policy" content="default-src https:"></pre>
 
-<pre># Disable the use of unsafe inline/eval, allow everything else plugin execution
+<pre># Disable the use of unsafe inline/eval, allow everything else except plugin execution
 Content-Security-Policy: default-src *; object-src 'none'</pre>
 
 <pre># Disable unsafe inline/eval, only load resources from same origin except also allow images from imgur
